updated server file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stripe-drills",
+  "name": "payment-drills",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -8,5 +8,19 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rkborgstrom/stripe-drills.git"
+  },
+  "bugs": {
+    "url": "https://github.com/rkborgstrom/stripe-drills/issues"
+  },
+  "homepage": "https://github.com/rkborgstrom/stripe-drills#readme",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "knex": "^0.15.2"
+  }
 }
