--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "homepage": "https://github.com/rkborgstrom/stripe-drills#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "ejs": "^2.6.1",
+    "bootstrap": "^4.1.3",
     "express": "^4.16.3",
-    "knex": "^0.15.2"
+    "hbs": "^4.0.1",
+    "stripe": "^6.8.0"
   }
 }
